Fix article overflow

--- a/src/sections/projects/Projects.scss
+++ b/src/sections/projects/Projects.scss
@@ -55,7 +55,8 @@
     .card {
       grid-template-columns: repeat(2, 1fr);
       padding: 1rem;
-
+      align-items: center;
+      
       .card-header {
         border-radius: 1rem;
 
